# freecad-mcp

./: .claude-project-config.md  .claude.json  .dockerignore  .gitignore  AGENT-DEBUGGING.md  AGENT-INSTALL.md  CAM_AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_API_GUIDE.md  CONTRIBUTING.md  DEFERRED_TESTS.md  DEPLOYMENT_GUIDE.md  Dockerfile  INSTALL.md  KNOWN_ISSUES.md  MCP-CAPABILITIES.md  QUICK-REFERENCE.md  README-CLAUDE-DESKTOP.md  README.md  REFACTORING-AUDIT.md  RELEASE-v3.4.1.md  SECURITY.md  STATUS.md  TESTING-CHECKLIST.md  TOOLS.md  VERSIONS.md  WORKTREE_CLEANUP_SUMMARY.md  WORKTREE_QUICK_REFERENCE.md  cleanup_worktrees.sh  cliff.toml  deploy.sh  docker-entrypoint.sh  freecad_crash_report.py  freecad_mcp_server.py  glama.json  mcp_bridge_framing.py  pyproject.toml  requirements.txt  server.json  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  check-upstream-releases.yml  dependabot-automerge.yml  docker-publish.yml  (+5 more)
AICopilot/: Init.py  InitGui.py  SCREENSHOT_REJECTION_CHANGES.md  crash_watcher.py  event_observer.py  freecad_debug.py  freecad_health.py  freecad_mcp_handler.py  headless_server.py  instance_registry.py  mcp_versions.py  ocl_surface_op.py  socket_server.py
archive/: socket_server_v2.1.2_root_unused.py  socket_server_v3.0.0_bloated.py
debug/: README.md  freecad_debug.py  freecad_health.py  mcp_versions.py  socket_server_stub.py
docs/: CAM_API_CHANGES_FC12.md  CAM_CRUD_OPERATIONS.md  CAM_OPERATIONS.md  CAM_QUICK_REFERENCE.md  CLAUDE_DESKTOP_CAM_GUIDE.md  CLAUDE_DESKTOP_MCP_USAGE.md  diagnostics.md  scenario-external-refs.md  scenario-shingles.md
helpers/: PARAMETRIC_GUIDE.md  WINDOW_DOOR_GUIDE.md  parametric_helpers.py  window_door_helpers.py
tests/: INTERACTIVE_TEST_PLAN.md  NEW_TESTS_SUMMARY.md  README_TESTING.md  baseline_cam_test.py  run_regression.py  simple_import_test.py  socket_test_client_v2.py  test_config.py  working_test.py
(+74 files in other folders)
