[project]
name = "freecad-mcp"
version = "5.0.0"
description = "MCP server to control FreeCAD from Claude"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.1",
]

[project.optional-dependencies]
test = ["pytest>=9.0.3", "pip-audit>=2.10.0"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
markers = [
    "cam: requires FreeCAD 1.2-dev (CAM/Path workbench)",
]
