[project]
name = "freecad-mcp"
version = "5.6.0"
description = "MCP server to control FreeCAD from Claude"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Brian L Wong", email = "blw@blw.net" },
]
keywords = [
    "freecad", "cad", "3d-modeling", "parametric", "cam", "cnc",
    "mcp", "model-context-protocol", "claude", "ai",
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.1",
]

[project.urls]
Homepage = "https://github.com/blwfish/freecad-mcp"
Repository = "https://github.com/blwfish/freecad-mcp"
Issues = "https://github.com/blwfish/freecad-mcp/issues"

[project.optional-dependencies]
test = ["pytest>=9.0.3", "pip-audit>=2.10.0"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
markers = [
    "cam: requires FreeCAD 1.2-dev (CAM/Path workbench)",
]
